<resources>
    <string name="app_name">MyMood</string>
    <string name="have_account_signup">Don\'t have an account? <b> Register </b></string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="title_app">MyMood</string>
    <string name="settings">Settings</string>
    <string name="add_note">Add</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="cancel">Cancel</string>
    <string name="search">search</string>
    <string name="profile">Profile</string>
    <string name="notes">Notes</string>
    <string name="statistics">Statistics</string>
    <string name="name_smiling_super">super</string>
    <string name="name_smiling_good">good</string>
    <string name="name_smiling_neutral">neutral</string>
    <string name="name_smiling_bad">bad</string>
    <string name="name_smiling_terrible">terrible</string>
    <string name="button_super_description">Button super</string>
    <string name="button_good_description">Button good</string>
    <string name="button_neutral_description">Button neutral</string>
    <string name="button_bad_description">Button bad</string>
    <string name="button_terrible_description">Button terrible</string>
    <string name="question_feeling">How do you feel?</string>
    <string name="choose_mood">Choose your mood</string>
    <string name="photo_profile">Profile photo</string>
    <string name="name_profile">Name</string>
    <string name="email_profile">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="edit_profile">Edit profile</string>
    <string name="name_user">name user</string>
    <string name="email_user">email user</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_description">Add description</string>
    <string name="affirmation_health_description">AffirmationHealth</string>
    <string name="title_affirmation">Title Affirmation</string>
    <string name="description_affirmation">Description Affirmation</string>
    <string name="how_to_listen">how to listen?</string>
    <string name="start">start</string>
    <string name="practices">practices</string>
    <string name="exit_account">exit account</string>
    <string name="affirmations">affirmations</string>
    <string name="meditation">meditation</string>
    <string name="breathing_practices">breathing practices</string>
    <string name="time_affirmation">Time affirmation</string>
</resources>