<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigationView">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/icon_person"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_note"
            android:icon="@drawable/icon_note"
            android:title="@string/notes" />
        <item
            android:id="@+id/nav_statistic"
            android:icon="@drawable/icon_statistic"
            android:title="@string/statistics" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/icon_settings"
            android:title="@string/settings" />
    </group>
    <item android:id="@+id/group_practices"
        android:title="Practices">
        <menu>
            <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_affirmation"
                android:icon="@drawable/icon_affirmation"
                android:title="Affirmations" />
            <item
                android:id="@+id/nav_meditation"
                android:icon="@drawable/icon_meditation"
                android:title="Meditation" />
            <item
                android:id="@+id/nav_breathing_practices"
                android:icon="@drawable/icon_breath"
                android:title="Breathing practices" />
            </group>
        </menu>
    </item>
</menu>