<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailAffirmationActivity">

    <ImageView
        android:id="@+id/photoDetailAffirmationImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/health" />

    <TextView
        android:id="@+id/titleDetailAffirmationTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title_affirmation"
        android:textSize="20sp"
        android:textColor="#7682C3"
        android:lines="2"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/timeDetailAffirmationTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/time_affirmation"
        android:textColor="#7682C3"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/descriptionDetailAffirmationTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/description_affirmation"
        android:textSize="18sp"
        android:textColor="@color/dark_blue"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        >

        <Button
            android:id="@+id/howToListenButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_to_listen"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/icon_question"/>
        <Button
            android:id="@+id/startButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/icon_music"
            />

    </LinearLayout>

</LinearLayout>