<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    tools:context=".fragments.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/containerPhotoProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textViewPhotoProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:text="@string/photo_profile"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageViewPhotoProfile"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/icon_photo"
                app:civ_border_color="@color/dark_blue"
                app:civ_border_width="2dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewPhotoProfile" />

            <TextView
                android:id="@+id/textViewNameProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center"
                android:text="User Name"
                android:textColor="@color/text_output_color"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/imageViewPhotoProfile" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/linearLayoutInfoProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/containerPhotoProfile">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:text="@string/email_profile"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextEmailProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_profile"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextPhoneProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:maxLines="1"
                android:textSize="15sp" />

        </LinearLayout>

        <Button
            android:id="@+id/buttonEditProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textColor="@color/white"
            android:background="@drawable/button_log"
            android:text="@string/edit_profile"
            app:layout_constraintTop_toBottomOf="@id/linearLayoutInfoProfile" />
        <Button
            android:id="@+id/buttonExitAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:background="@drawable/button_log"
            android:text="@string/exit_account"
            app:layout_constraintTop_toBottomOf="@id/buttonEditProfile"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>